css/style.css
body {
    font-size: 0;
    height: 100%;
    padding: 0;
    margin: 0;
    background-image: linear-gradient(aliceblue, #055A5E);
    background-repeat: no-repeat;
    background-size: 100% 110%;
}

h1 {
    font-family: sans-serif;
    color: darkblue;
    position: relative;
    z-index: 0;
    line-height: 1.5;
    font-size: 3vw;
    text-decoration: underline;
}

h2 {
    font-family: sans-serif;
    color: #417272;
    position: relative;
    z-index: 0;
    font-size: 2vw;
}

h3 {
    font-family: sans-serif;
    color: #417272;
    position: relative;
    z-index: 0;
    font-size: 1.5vw;
}

p {
    font-family: sans-serif;
    color: #417272;
    position: relative;
    z-index: 0;
    font-size: 1.25vw;
}


h4 {
    font-family: sans-serif;
    color: #417272;
    position: relative;
    line-height: 1.5;
    z-index: 0;
    font-size: 1.2vw;
}

#greeting {
    font-size: 2vw;
}

div.top {
    position: relative;
    width: 80vw;
    left: 10%;
    height: 35vh;
    z-index: 1500;
    overflow: hidden;
    background-image: url(background_image.jpg);
    background-repeat: no-repeat;
    background-size: 80vw 35vh;
    font-size: 0;
    border: 0.25vw solid midnightblue;
    border-bottom: none;
}

.bottom {
    width:80vw;
    text-align:center;
    position: fixed;
    left:10%;
    bottom: 0px;
    z-index: 1500;
    height: 7vh;
    border: 0.25vw solid midnightblue;
    background: linear-gradient(to right, #03C3C7,#417272);
    font-size: 0;
}

#access {
    position: relative;
    bottom: 1.75vh;
    left: 1vw;
    color: aliceblue;
}

#access:hover {
    color: midnightblue;
    
}

.left {
    float: left;
    padding: 0.5vw;
    margin-right: 1.5vw;
    margin-top: 1.5vh;
    width: 30vw;
    height: auto;
}

.left-samples {
    float: left;
    padding: 1vw;
    height: 15vw;
    width: auto;
}

.left-chess {
    float: left;
    padding: 1vw;
    width: 50vw;
}

.moved-left-pro {
    height: 120vh;
    left: 10%;
    width: 80vw;
    position: relative;
    background-color:lightcyan;
    padding: 2vw;
    border: 0.25vw solid midnightblue;
}
.moved-left-samples {
    height: 263vh;
    position: relative;
    width: 80vw;
    left: 10%;
    background-color:lightcyan;
    padding: 2vw;
    border: 0.25vw solid midnightblue;
}
.moved-left-index {
    height: 125vh;
    position: relative;
    width: 80vw;
    left: 10%;
    background-color:lightcyan;
    padding: 2vw;
    border: 0.25vw solid midnightblue;
}
.moved-left-about {
    height: 135vh;
    position: relative;
    width: 80vw;
    left: 10%;
    background-color:lightcyan;
    padding: 2vw;
    border: 0.25vw solid midnightblue;
}
.moved-left-ed {
    height: 150vh;
    position: relative;
    width: 80vw;
    left: 10%;
    background-color:lightcyan;
    padding: 2vw;
    border: 0.25vw solid midnightblue;
}
.moved-left-exp {
    height: 80vh;
    position: relative;
    width: 80vw;
    left: 10%;
    background-color:lightcyan;
    padding: 2vw;
    border: 0.25vw solid midnightblue;
}
.moved-left-acc {
    height: 130vh;
    position: relative;
    width: 80vw;
    left: 10%;
    background-color:lightcyan;
    padding: 2vw;
    border: 0.25vw solid midnightblue;
}
.moved-left-contact {
    height: 120vh;
    position: relative;
    width: 80vw;
    left: 10%;
    background-color:lightcyan;
    padding: 2vw;
    border: 0.25vw solid midnightblue;
}

.moved-left-access {
    height: 120vh;
    position: relative;
    width: 80vw;
    left: 10%;
    background-color:lightcyan;
    padding: 2vw;
    border: 0.25vw solid midnightblue;
}

label {
    z-index: 100;
}

.right {
    float: right;
    padding: 1vw;
    width: 40vw;
}

.picture {
    float: left;
    width: 100%;
    
}

.items {
    float: left;
    position: relative;
}

.push {
    position: absolute;
    height: 5vh;
    width: 100%;
}


.social {
    padding: 5px;
    height: 6vh;
}

#greeting {
    text-align: center;
    width: 100%;
}

.next {
    position: relative;
    width: 100%;
    text-align: center;
    top: 0px;
    left: 0px;
    overflow: hidden;
}

.bottom-border {
    padding-bottom: 2vh;
    padding-top: 2vh;
    border-bottom: 0.25vh solid midnightblue;
}

.list {
    position: relative;
    width: 100%;
    height: 800px;
    left: 0px;
}

a:link {
    color: #0C566D;
    line-height: 1.5;
    font-family: sans-serif;
}

a:visited {
    color: #417272;
    line-height: 1.5;
    font-family: sans-serif;
}

a:hover {
    color: midnightblue;
    line-height: 1.5;
}

.project {
    font-size: 1.5vw;
    line-height:1.5;
}

ul {
    line-height: 1.5;
    position: relative;
    left: 10px;
    list-style-type: circle;
    width: 80vw;
}



li {
    font-family: sans-serif;
    color: #004A62;
    line-height: 1.5;
    font-size: 1.2vw;
}

#navigation {
    list-style-type: none;
    top: 1.5vh;
    padding-left: 2vw;
    z-index: 900;
    width:  100%;
    margin: 0px auto;
    text-align: center;
}

.top-bar {
    background: linear-gradient(to right, #03C3C7,#417272);
    width: 80vw;
    left: 10%;
    position: relative;
    height: 10vh;
    border: 0.25vw solid midnightblue;
    border-bottom: none;
}


.navItem {
    text-align: center;
    float: left;
    z-index:1000;
    padding: 0.5vw;
    margin: 0px 0.25vw;
    border: 2px solid midnightblue;
    border-radius: 5px;
    background: lightblue;
}


.navLink {
    display: block;
    font-weight: bold;
    font-size: 1.25vw;
    text-decoration: none;
    text-align: center;
    z-index: 1000;
}

input {
    width: 40%;
    padding: 10px 15px;
    margin: 6px 0;
    box-sizing: border-box;
}

textarea {
    width: 40%;
    padding: 10px 15px;
    margin: 6px 0;
    box-sizing: border-box;
}

form {
    font-family: sans-serif;
    color:midnightblue;
    position: relative;
    text-align: center;
}

.formDiv {
    height: 400px;
}

.center {
    width: 100%;
    position: relative;
    text-align: center;
}

.centerI {
    display: block;
    margin-left: auto;
    margin-right: auto;
    margin-top: 7vh;
    width: 35vw;
}

.logo {
    display: block;
    margin-top: 7vh;
    width: 35vw;
    margin-left: 2vw;
}

.rightI {
    float: right;
    width: 20vw;
    margin: 1vw;
    padding: 0.5vw;
}

.leftP {
    left: right;
    width: 700px;
    padding: 10px;
}

.usual {
    font-family: sans-serif;
    color:darkslateblue;
    padding: 1vw 3vh;
    margin: 2vw 0;
    line-height: 1.5;
    position: relative;
    font-size: 1.25vw;
}

* {
  box-sizing: border-box;
}

.gallery-container::after {
    content: "";
    clear: both;
    display: table;
    height: 5vh;
}

div.gallery {
    float: left;
    width: 23%;
    margin: 5px;
    border: 1px solid #ccc;
    padding: 5px;
    background-color: aliceblue;
}

.gallery-image {
    width: 100%;
    height: auto;
}


div.gallery:hover {
    border: 1px solid #777;
    background-color: skyblue;
}

div.gallery2 {
    border: 0.5vw solid skyblue;
    float: right;
    height: auto;
    width: 45%;
    margin: 0.5vw;
}

a {
    font-size: 1.5vw;
}

.images {
    width: 40%;
    float: right;
}
.acc-list {
    position: relative;
    width: 60%;
    height: 100vh;
    float: left;
}
.text-image {
    float: left;
}

.none {
    display: none;
}

div.desc {
    padding: 1vw;
    text-align: center;
    font-size: 1.25vw;
    background-color: aliceblue;
}

div.desc:hover {
    background-color: skyblue;
}

a.noUnderline {
    text-decoration: none;
    font-weight: bold;
}

#resume {
    position: relative;
    font-size: 2vw;
}

#scratch {
    font-size: 16px;
}

#achievements {
    float: left;
    width: 100%;
}

